fixed css overlap

--- a/src/components/ListItem.css
+++ b/src/components/ListItem.css
@@ -5,19 +5,19 @@
     margin-top: 7%;
 }
 
-form {
+#form-id {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 15%;
 }
 
-form button {
+#button-id {
     border-radius: 9px;
     font-size: 1rem;
     font-weight: bold;
 }
 
-h2 {
+#h2-id {
     font-size: 2rem;
 }
